
Improved rendering on text mode drivers: now realvideo mode can render directly to black&white text. Try TSConf with --vo stdout --realvideo --autoredrawstdout
Improved Linux library dependencies: libssl is not enabled by default on compilation

Fixed TBBlue MMU when using segment 0000-3FFFH
Fixed ZX-Uno emulation: 128kb timings are the same as a Spectrum 128k. When port 1ffd enabled, port FF return FF
Fixed Raster interrupts on ZX-Uno and TBBlue. Horizontal raster position was wrong
Fixed window footer when running Pentagon
Fixed panic screen: now it is shown on all machines. New design. I hope you never see it ;)
Fixed some crashes with speech enabled and opening some menus: AY Registers, AY Player, etc...
Fixed annoying sound on Dandanator rom menu
Fixed bug on Z80 cpu core, iff2 was not being reset to 0 when firing an interrupt, so reading it by using LD A,R and LD A,I affected many demos


Version 6.0. 27 November 2017 - Gunfright edition

Added machine ZX-Evolution TS-Conf
Added machine Chrome (Italian ZX Spectrum Clone)
Added machine MK14
Added lots of new ZEsarUX remote commands (ZRCP). See ZRCP help to know them
Added Visualmem, Poke, Find, Save binary menus also for Sinclair QL
Added QL GUI Style
Added setting to test configuration
Added menu to find and set lives in games
Added menu to view color palettes
Added actions commands to breakpoints, so you can run some actions when a breakpoint is fired
Added up to three AY Chips
Added emulation of other DAC chips appart from Specdrum: Covox, etc
Added Antonio Villena's "Kartusho" cartridge interface
Added quicksave function
Added setting to set 256kb or 512kb on Spectrum 128k machines
Added setting to set F keys (F1, F2, etc) to run different actions: reset, nmi, exit emulator, etc